--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@headlessui/react": "^2.1.2",
     "@heroicons/react": "^2.1.4",
     "@orbs-network/ton-access": "^2.3.3",
+    "@tanstack/react-query": "^5.62.2",
     "@ton/core": "^0.56.3",
     "@ton/crypto": "^3.2.0",
     "@ton/ton": "^13.11.2",
@@ -21,6 +22,7 @@
     "@twa-dev/sdk": "^7.0.0",
     "axios": "^1.7.2",
     "chart.js": "^4.4.6",
+    "dayjs": "^1.11.13",
     "framer-motion": "^11.3.8",
     "jspdf": "^2.5.2",
     "react": "^18.3.1",
@@ -31,6 +33,7 @@
     "react-flow-renderer": "^10.3.17",
     "react-helmet-async": "^2.0.5",
     "react-icons": "^5.2.1",
+    "react-loading-icons": "^1.1.0",
     "react-router-dom": "^6.24.0",
     "react-select": "^5.8.0",
     "tailwind-scrollbar": "^3.1.0",
